convert spec to markdown

--- a/latex/xdi.sty
+++ b/latex/xdi.sty
@@ -3,7 +3,7 @@
 %% Dictionary of Metadata
 %%
 \usepackage{bera}               % font selection
-\usepackage[ascii]{inputenc}
+\usepackage[utf8]{inputenc}
 
 \usepackage{fancybox}           % shadow and oval boxes
 \usepackage{amsmath, amssymb}   % AMS mathematics
