work on spec and background docs

--- a/specification/xdi_background.tex
+++ b/specification/xdi_background.tex
@@ -3,7 +3,7 @@
 \renewcommand{\Summary}{{\xdi} Background}
 
 \begin{document}
-\input{background.tex}
+\input{background_inner.tex}
 \end{document}
 
 %%% Local Variables:
