--- a/specification/xdi_spec.tex
+++ b/specification/xdi_spec.tex
@@ -3,7 +3,7 @@
 \renewcommand{\Summary}{{\xdi} Specification \xdiversion}
 
 \begin{document}
-\input{spec.tex}
+\input{spec_inner.tex}
 \end{document}
 
 %%% Local Variables:
