added dictionary document

--- a/specification/xdi.sty
+++ b/specification/xdi.sty
@@ -26,6 +26,12 @@
 
 \usepackage{tocloft}            % fine control over the table of contents
 \setlength\cftparskip{-1pt}
+\setlength{\cftsubsecnumwidth}{3em} % allow a bit more space after the
+                                % subsection number in the TOC
+
+\usepackage{longtable}       % longtable and booktabs used to
+\usepackage{booktabs}        % handle pandoc's table in the dictionary
+
 
 \usepackage{fullpage}
 \setlength{\parindent}{0pt}
