update dictionary and latex style

--- a/specification/xdi.sty
+++ b/specification/xdi.sty
@@ -28,6 +28,7 @@
 \setlength\cftparskip{-1pt}
 \setlength{\cftsubsecnumwidth}{3em} % allow a bit more space after the
                                 % subsection number in the TOC
+\setcounter{tocdepth}{2}
 
 \usepackage{longtable}       % longtable and booktabs used to
 \usepackage{booktabs}        % handle pandoc's table in the dictionary
