--- a/specification/xdi_spec.tex
+++ b/specification/xdi_spec.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 \usepackage{xdi}
 \renewcommand{\Summary}{{\xdi} Specification \xdiversion}
 
