--- a/specification/xdi_dictionary.tex
+++ b/specification/xdi_dictionary.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 \usepackage{xdi}
 \renewcommand{\Summary}{Dictionary of Metadata, version \xdiversion}
 
